Fix dark mode colors

--- a/packages/client/src/DarkMode.scss
+++ b/packages/client/src/DarkMode.scss
@@ -45,6 +45,8 @@ html.darkMode {
   border-bottom-color: var(--border-color);
 }
 
+.ui.list .list > .item .description,
+.ui.list > .item .description,
 .ui.checkbox:not(.invisible) label:hover,
 .ui.checkbox:not(.invisible) + label:hover,
 .ui.checkbox:not(.invisible) input:focus ~ label,
